Update to 1.7.9